--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,17 +21,17 @@ services:
     environment:
       - NGINX_HOST=${NGINX_HOST}
     volumes:
-      - ./nginx/first_start/:/etc/nginx/templates/:ro
-      # - ./nginx/templates/:/etc/nginx/templates/:ro
-      - ./certbot/www:/var/www/certbot/:rw
-      - ./certbot/conf/:/etc/nginx/ssl/:ro
+      #- ./nginx/first_start:/etc/nginx/templates:ro
+      - ./nginx/templates:/etc/nginx/templates:ro
+      - ./certbot/www:/var/www/certbot:rw
+      - ./certbot/conf:/etc/nginx/ssl:ro
     networks:
       - bot_network
   certbot:
     image: certbot/certbot:v2.5.0
     volumes:
-      - ./certbot/www/:/var/www/certbot/:rw
-      - ./certbot/conf/:/etc/letsencrypt/:rw
+      - ./certbot/www:/var/www/certbot:rw
+      - ./certbot/conf:/etc/letsencrypt:rw
     networks:
       - bot_network
 
