--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,9 +29,12 @@ services:
       - bot_network
   certbot:
     image: certbot/certbot:v2.5.0
+    command: sh -c "certbot certonly --standalone --agree-tos --non-interactive --email romaa251205@gmail.com -d ${NGINX_HOST} && sleep infinity"
     volumes:
       - ./certbot/www:/var/www/certbot:rw
       - ./certbot/conf:/etc/letsencrypt:rw
+    depends_on:
+      - nginx
     networks:
       - bot_network
 
