--- a/nginx/first_start/default.conf
+++ b/nginx/first_start/default.conf
@@ -1,16 +1,13 @@
 server {
     listen 80;
-    listen [::]:80;
-
     server_name bot.shasero.ru;
-    server_tokens off;
-
+    
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
         try_files $uri =404;
     }
-
+    
     location / {
-        return 301 https://${NGINX_HOST}$request_uri;
+        return 301 https://$bot.shasero.ru$request_uri;
     }
 }
