--- a/nginx/first_start/default.conf
+++ b/nginx/first_start/default.conf
@@ -8,6 +8,6 @@ server {
     }
     
     location / {
-        return 301 https://$bot.shasero.ru$request_uri;
+        return 301 https://$host$request_uri;
     }
 }
