--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
     environment:
       - NGINX_HOST=${NGINX_HOST}
     volumes:
-      - ./nginx/first_start:/etc/nginx/templates:ro
+      - ./nginx/first_start:/etc/nginx/conf.d:ro
       # - ./nginx/templates:/etc/nginx/templates:ro
       - ./certbot/www:/var/www/certbot:rw
       - ./certbot/conf:/etc/nginx/ssl:ro
