--- a/nginx/first_start/default.conf
+++ b/nginx/first_start/default.conf
@@ -3,8 +3,7 @@ server {
     server_name bot.shasero.ru;
     
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-        default_type text/plain;
+        alias /var/www/certbot/.well-known/acme-challenge/;
         try_files $uri =404;
     }
     
