--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
       - NGINX_HOST=${NGINX_HOST}
     volumes:
       # - ./nginx/first_start:/etc/nginx/conf.d:ro
-      - ./nginx/templates:/etc/nginx/templates:ro
+      - ./nginx/templates:/etc/nginx/conf.d:ro
       - ./certbot/www:/var/www/certbot:rw
       - ./certbot/conf:/etc/nginx/ssl:ro
     networks:
