--- a/nginx/templates/default.conf
+++ b/nginx/templates/default.conf
@@ -1,11 +1,10 @@
-upstream bot{
-        server bot:3001;
+upstream bot {
+    server bot:7111;
 }
 
 server {
     listen 80;
     listen [::]:80;
-
     server_name bot.shasero.ru;
     server_tokens off;
 
@@ -14,20 +13,35 @@ server {
     }
 
     location / {
-        return 301 https://${NGINX_HOST}$request_uri;
+        return 301 https://$host$request_uri;
     }
 }
 
 server {
-    listen 443 default_server ssl http2;
+    listen 443 ssl http2;
     listen [::]:443 ssl http2;
-
     server_name bot.shasero.ru;
+    server_tokens off;
 
-    ssl_certificate /etc/nginx/ssl/live/${NGINX_HOST}/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/${NGINX_HOST}/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/live/bot.shasero.ru/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/bot.shasero.ru/privkey.pem;
     
+    # Modern SSL configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 1d;
+
     location /webhook {
-    proxy_pass http://bot;
+        proxy_pass http://bot;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location / {
+        return 404;
     }
 }
