--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+
   nginx:
     image: nginx:1.23-alpine
     ports:
@@ -24,14 +25,17 @@ services:
       - "443:443"
     restart: always
     environment:
-      - NGINX_HOST=${NGINX_HOST}
+      - NGINX_HOST=bot.shasero.ru
     volumes:
-      # - ./nginx/first_start:/etc/nginx/conf.d:ro
       - ./nginx/templates:/etc/nginx/conf.d:rw
       - ./certbot/www:/var/www/certbot:rw
       - ./certbot/conf:/etc/nginx/ssl:ro
     networks:
       - bot_network
+    depends_on:
+      bot:
+        condition: service_healthy
+
   certbot:
     image: certbot/certbot:v2.5.0
     command: [
@@ -41,7 +45,8 @@ services:
       "--agree-tos",
       "--non-interactive",
       "--email=romaa251205@gmail.com",
-      "-d", "bot.shasero.ru"
+      "-d", "bot.shasero.ru",
+      "--keep-until-expiring"
     ]
     volumes:
       - ./certbot/www:/var/www/certbot:rw
@@ -53,4 +58,4 @@ services:
 
 networks:
   bot_network:
-      driver: bridge
+    driver: bridge
