--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,10 +13,11 @@ services:
     networks:
       - bot_network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:7111/health"]
+      test: ["CMD-SHELL", "curl -f http://localhost:7111/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 20s
 
   nginx:
     image: nginx:1.23-alpine
