--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,8 +16,8 @@ services:
       test: ["CMD-SHELL", "curl -f http://localhost:7111/health || exit 1"]
       interval: 30s
       timeout: 10s
-      retries: 3
-      start_period: 20s
+      retries: 5  # Увеличиваем количество попыток
+      start_period: 30s
 
   nginx:
     image: nginx:1.23-alpine
