--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,11 +13,11 @@ services:
     networks:
       - bot_network
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:7111/health || exit 1"]
+      test: ["CMD-SHELL", "timeout 5 bash -c 'until curl -f http://localhost:7111/health; do sleep 1; done' || exit 1"]
       interval: 30s
       timeout: 10s
-      retries: 5  # Увеличиваем количество попыток
-      start_period: 30s
+      retries: 5
+      start_period: 40s
 
   nginx:
     image: nginx:1.23-alpine
