--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,16 +26,13 @@ services:
       - "443:443"
     restart: always
     volumes:
-      - ./nginx/templates:/etc/nginx/conf.d:rw
+      - ./nginx/first_start:/etc/nginx/conf.d:rw  # Используем начальную конфигурацию
       - ./certbot/www:/var/www/certbot:rw
-      - ./certbot/conf:/etc/nginx/ssl:ro
     networks:
       - bot_network
     depends_on:
       bot:
         condition: service_healthy
-      certbot:
-        condition: service_completed_successfully
 
   certbot:
     image: certbot/certbot:v2.5.0
@@ -54,6 +51,19 @@ services:
       - ./certbot/conf:/etc/letsencrypt:rw
     depends_on:
       - nginx
+    networks:
+      - bot_network
+
+  nginx_ssl:
+    image: nginx:1.23-alpine
+    ports:
+      - "443:443"
+    restart: always
+    volumes:
+      - ./nginx/templates:/etc/nginx/conf.d:rw  # Основная конфигурация с SSL
+      - ./certbot/conf:/etc/nginx/ssl:ro
+    depends_on:
+      - certbot
     networks:
       - bot_network
 
