--- a/nginx/templates/default.conf
+++ b/nginx/templates/default.conf
@@ -24,8 +24,9 @@ server {
     server_name bot.shasero.ru;
     server_tokens off;
 
-    ssl_certificate /etc/nginx/ssl/live/bot.shasero.ru/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/bot.shasero.ru/privkey.pem;
+    # Исправленные пути к сертификатам
+    ssl_certificate /etc/letsencrypt/live/bot.shasero.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/bot.shasero.ru/privkey.pem;
     
     # SSL optimization
     ssl_session_timeout 1d;
