--- a/nginx/templates/default.conf
+++ b/nginx/templates/default.conf
@@ -25,8 +25,8 @@ server {
     server_tokens off;
 
     # Исправленные пути к сертификатам
-    ssl_certificate /etc/letsencrypt/live/bot.shasero.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/bot.shasero.ru/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/bot.shasero.ru-0001/fullchain.pem;
+ssl_certificate_key /etc/letsencrypt/live/bot.shasero.ru-0001/privkey.pem;
     
     # SSL optimization
     ssl_session_timeout 1d;
