--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,8 @@ services:
       - "443:443"
     restart: always
     volumes:
-      - ./nginx/first_start:/etc/nginx/conf.d:rw
+      # - ./nginx/first_start:/etc/nginx/conf.d:rw
+      - ./nginx/templates:/etc/nginx/conf.d:rw
       - ./certbot/www:/var/www/certbot:rw
       - ./certbot/conf:/etc/letsencrypt:rw
     networks:
