--- a/nginx/templates/default.conf
+++ b/nginx/templates/default.conf
@@ -18,40 +18,40 @@ server {
     }
 }
 
-server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name bot.shasero.ru;
-    server_tokens off;
+# server {
+#     listen 443 ssl http2;
+#     listen [::]:443 ssl http2;
+#     server_name bot.shasero.ru;
+#     server_tokens off;
 
-    # Исправленные пути к сертификатам
-    ssl_certificate /etc/letsencrypt/live/bot.shasero.ru-0001/fullchain.pem;
-ssl_certificate_key /etc/letsencrypt/live/bot.shasero.ru-0001/privkey.pem;
+#     # Исправленные пути к сертификатам
+#     ssl_certificate /etc/letsencrypt/live/bot.shasero.ru/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/bot.shasero.ru/privkey.pem;
     
-    # SSL optimization
-    ssl_session_timeout 1d;
-    ssl_session_cache shared:MozSSL:10m;
-    ssl_session_tickets off;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
-    ssl_prefer_server_ciphers off;
+#     # SSL optimization
+#     ssl_session_timeout 1d;
+#     ssl_session_cache shared:MozSSL:10m;
+#     ssl_session_tickets off;
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+#     ssl_prefer_server_ciphers off;
     
-    # HSTS
-    add_header Strict-Transport-Security "max-age=63072000" always;
+#     # HSTS
+#     add_header Strict-Transport-Security "max-age=63072000" always;
 
-    location /webhook {
-        proxy_pass http://bot;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_read_timeout 86400;
-    }
+#     location /webhook {
+#         proxy_pass http://bot;
+#         proxy_http_version 1.1;
+#         proxy_set_header Upgrade $http_upgrade;
+#         proxy_set_header Connection "upgrade";
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_read_timeout 86400;
+#     }
 
-    location / {
-        return 404;
-    }
-}
+#     location / {
+#         return 404;
+#     }
+# }
