--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,22 +36,25 @@ services:
         condition: service_healthy
 
   certbot:
-    image: certbot/certbot:v2.5.0
-    command: [
-      "renew",
-      "--webroot",
-      "--webroot-path=/var/www/certbot",
-      "--quiet",
-      "--post-hook",
-      "nginx -s reload"
-    ]
-    volumes:
-      - ./certbot/www:/var/www/certbot:rw
-      - ./certbot/conf:/etc/letsencrypt:rw
-    depends_on:
-      - nginx
-    networks:
-      - bot_network
+  image: certbot/certbot:v2.5.0
+  command: [
+    "certonly",
+    "--webroot",
+    "--webroot-path=/var/www/certbot",
+    "--email=romaa251205@gmail.com", 
+    "--agree-tos",
+    "--no-eff-email",
+    "--force-renewal",
+    "-d", "bot.shasero.ru",
+    "--quiet"
+  ]
+  volumes:
+    - ./certbot/www:/var/www/certbot:rw
+    - ./certbot/conf:/etc/letsencrypt:rw
+  depends_on:
+    - nginx
+  networks:
+    - bot_network
 
 networks:
   bot_network:
