--- a/nginx/templates/default.conf
+++ b/nginx/templates/default.conf
@@ -24,11 +24,9 @@ server {
     server_name bot.shasero.ru;
     server_tokens off;
 
-    # Исправленные пути к сертификатам
     ssl_certificate /etc/letsencrypt/live/bot.shasero.ru/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/bot.shasero.ru/privkey.pem;
     
-    # SSL optimization
     ssl_session_timeout 1d;
     ssl_session_cache shared:MozSSL:10m;
     ssl_session_tickets off;
@@ -36,8 +34,13 @@ server {
     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
     ssl_prefer_server_ciphers off;
     
-    # HSTS
     add_header Strict-Transport-Security "max-age=63072000" always;
+
+    location /health {
+        proxy_pass http://bot;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 
     location /webhook {
         proxy_pass http://bot;
