--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,17 +27,20 @@ services:
     restart: always
     volumes:
       # - ./nginx/first_start_last/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./nginx/templates:/etc/nginx/conf.d:rw
+      # - ./nginx/templates:/etc/nginx/conf.d:rw
+      # - ./certbot/www:/var/www/certbot:rw
+      # - ./certbot/conf:/etc/letsencrypt:rw
+      - ./nginx/temp.conf:/etc/nginx/conf.d/default.conf:ro
       - ./certbot/www:/var/www/certbot:rw
-      - ./certbot/conf:/etc/letsencrypt:rw
     networks:
       - bot_network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost"]
-      interval: 30s
-      timeout: 5s
-      retries: 3
-      start_period: 30s
+      test: ["CMD", "curl", "-f", "http://localhost/.well-known/acme-challenge/"]
+      # test: ["CMD", "curl", "-f", "http://localhost"]
+      # interval: 30s
+      # timeout: 5s
+      # retries: 3
+      # start_period: 30s
     depends_on:
       bot:
         condition: service_healthy
