--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,15 +35,13 @@ services:
     networks:
       - bot_network
     healthcheck:
-      disable: true
-      # test: ["CMD", "curl", "-f", "http://localhost/.well-known/acme-challenge/"]
-      # test: ["CMD", "curl", "-f", "http://localhost"]
-      # interval: 30s
-      # timeout: 5s
-      # retries: 3
-      # start_period: 30s
+      test: ["CMD", "curl", "-f", "http://localhost/.well-known/acme-challenge/"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
     depends_on:
-      - certbot
+      - bot
       # bot:
       #   condition: service_healthy
 
