--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,9 +41,8 @@ services:
       retries: 3
       start_period: 30s
     depends_on:
-      - bot
-      # bot:
-      #   condition: service_healthy
+      bot:
+        condition: service_healthy
 
   certbot:
     image: certbot/certbot:v2.5.0
