--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,16 +26,16 @@ services:
       - "443:443"
     restart: always
     volumes:
-      # - ./nginx/first_start_last/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/first_start_last/default.conf.d:rw
       # - ./nginx/templates:/etc/nginx/conf.d:rw
       # - ./certbot/www:/var/www/certbot:rw
       # - ./certbot/conf:/etc/letsencrypt:rw
-      - ./nginx/temp.conf:/etc/nginx/conf.d/default.conf:ro
       - ./certbot/www:/var/www/certbot:rw
     networks:
       - bot_network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost/.well-known/acme-challenge/"]
+      # test: ["CMD", "curl", "-f", "http://localhost/.well-known/acme-challenge/"]
+      test: ["CMD", "curl", "-f", "http://localhost"]
       interval: 30s
       timeout: 5s
       retries: 3
