--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
       - ./nginx/first_start:/etc/nginx/conf.d:rw
       # - ./nginx/templates:/etc/nginx/conf.d:rw
       # - ./certbot/www:/var/www/certbot:rw
-      # - ./certbot/conf:/etc/letsencrypt:rw
+      - ./certbot/conf:/etc/letsencrypt:rw
       - ./certbot/www:/var/www/certbot:rw
     networks:
       - bot_network
